--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -131,9 +131,7 @@
         <input type="button" class="btn btn-success" id="buildAndDeployDocker" value="Start"/>
         <hr/>
         <h3>Build logs</h3>
-        <div class="text-primary">
-
-        </div>
+        <pre style="color: white;background: black" id="dockerBuildCommandResponse"></pre>
     </input>
 </div>
 
