--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Docker generator</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -108,7 +108,8 @@
             </div>
             <hr/>
             <div>
-                <input type="button" value="Generate" id="generateDockerFIle" class="btn btn-success">
+                <input type="button" value="Generate docker" id="generateDockerFIle" class="btn btn-success">
+                <input type="button" value="Generate docker compose" id="generateDockerCompose" class="btn btn-success">
             </div>
         </form>
     </div>
